--- a/src/app.css
+++ b/src/app.css
@@ -22,3 +22,23 @@
   --input-style: solid;
   --display-h1-decoration: none;
 }
+
+
+.sub-section {
+  display: flex;
+  height: calc(100vh - 250px);
+  flex: 1;
+  /* padding: 20px; */
+  margin: 5px;
+  margin-top: 20px;
+  /* border: 1px solid rgb(163, 171, 186, 0.5); */
+  flex-direction: column;
+}
+
+.sub-section:first-child {
+  margin-left: 0;
+}
+
+.sub-section:last-child {
+  margin-right: 0;
+}
